Add logo and favicon, adjust styles and color scheme

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -11,13 +11,50 @@
 }
 
 @media only screen and (min-width: 1024px) {
+  .separateOnPageNav .wrapper,
+  .separateOnPageNav .headerWrapper.wrapper {
+    padding: 5px 20px;
+  }
 }
 
 @media only screen and (max-width: 1023px) {
+  .navigationSlider .slidingNav ul {
+    background: $lightGray;
+  }
 }
 
 @media only screen and (min-width: 1400px) {
 }
 
 @media only screen and (min-width: 1500px) {
+}
+.fixedHeaderContainer {
+  background-color: $headerBackground;
+  border-bottom: 1px solid $lightGray;
+}
+
+.fixedHeaderContainer a h2 {
+  color: $darkGray;
+}
+
+.navigationSlider .slidingNav ul li a {
+  color: $darkGray;
+}
+
+.navigationSlider .slidingNav ul li > a:focus,
+.navigationSlider .slidingNav ul li > a:hover,
+.navigationSlider .slidingNav ul li.siteNavItemActive > a,
+.navigationSlider .slidingNav ul li.siteNavGroupActive > a {
+  color: $gray;
+  background: transparent;
+}
+
+input#search_input_react {
+  background: transparent;
+  border: 1px solid $lightGray;
+  color: $darkGray !important;
+}
+::selection {
+  background-color: $primaryColor;
+  color: #fff;
 }
